--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
 	"name": "mysql-zod",
-	"version": "1.0.3",
+	"version": "2.0.0",
 	"description": "Generate Zod interfaces from MySQL database",
-	"bin": "generator.js",
+	"bin": "generator.mjs",
 	"repository": "git@github.com:erwinstone/mysql-zod.git",
 	"author": "Erwin Stone <erwinstone@pm.me>",
 	"license": "MIT",
 	"scripts": {
-		"build": "esbuild generator.ts --format=cjs --platform=node --outfile=generator.js --minify"
+		"build": "esbuild generator.ts --format=esm --platform=node --outfile=generator.mjs --minify"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^0.27.0",
 		"@types/fs-extra": "^9.0.13",
-		"@types/node": "^18.8.4",
-		"esbuild": "^0.15.10",
-		"eslint": "^8.25.0",
+		"@types/node": "^18.11.7",
+		"esbuild": "^0.15.12",
+		"eslint": "^8.26.0",
 		"typescript": "^4.8.4",
-    "zod": "^3.19.1"
+		"zod": "^3.19.1"
 	},
 	"dependencies": {
+		"camelcase": "^7.0.0",
 		"fs-extra": "^10.1.0",
 		"knex": "^2.3.0",
 		"mysql2": "^2.3.3"
