--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
 	"name": "mysql-zod",
 	"version": "2.0.4",
 	"description": "Generate Zod interfaces from MySQL database",
-	"bin": "generator.mjs",
 	"repository": "git@github.com:erwinstone/mysql-zod.git",
 	"author": "Erwin Stone <erwinstone@pm.me>",
 	"license": "MIT",
+	"type": "module",
+	"main": "./generator.mjs",
+	"types": "./generator.ts",
 	"scripts": {
 		"build": "esbuild generator.ts --format=esm --platform=node --outfile=generator.mjs --minify"
 	},
