--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-	"name": "mysql-zod",
-	"version": "2.0.4",
-	"description": "Generate Zod interfaces from MySQL database",
-	"bin": "generator.mjs",
-	"repository": "git@github.com:erwinstone/mysql-zod.git",
-	"author": "Erwin Stone <erwinstone@pm.me>",
-	"license": "MIT",
-	"scripts": {
-		"build": "esbuild generator.ts --format=esm --platform=node --outfile=generator.mjs --minify"
-	},
-	"devDependencies": {
-		"@antfu/eslint-config": "^0.34.0",
-		"@types/fs-extra": "^9.0.13",
-		"@types/node": "^18.11.18",
-		"esbuild": "^0.16.14",
-		"eslint": "^8.31.0",
-		"typescript": "^4.9.4",
-		"zod": "^3.20.2"
-	},
-	"dependencies": {
-		"camelcase": "^7.0.1",
-		"fs-extra": "^11.1.0",
-		"knex": "^2.3.0",
-		"mysql2": "^2.3.3"
-	}
+  "name": "mysql-zod",
+  "type": "module",
+  "version": "2.1.0",
+  "description": "Generate Zod interfaces from MySQL database",
+  "author": "Erwin Stone <erwinstone@pm.me>",
+  "license": "MIT",
+  "repository": "git@github.com:erwinstone/mysql-zod.git",
+  "main": "dist/main.js",
+  "types": "dist/main.d.ts",
+  "bin": "dist/bin.js",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "esbuild src/main.ts --format=esm --platform=node --outfile=dist/main.js --minify && esbuild src/bin.ts --format=esm --platform=node --outfile=dist/bin.js --minify",
+    "build-dts": "tsc src/main.ts -d --emitDeclarationOnly --esModuleInterop --outDir dist"
+  },
+  "dependencies": {
+    "camelcase": "^7.0.1",
+    "fs-extra": "^11.1.1",
+    "knex": "^2.4.2",
+    "mysql2": "^3.2.0"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^0.38.4",
+    "@types/fs-extra": "^11.0.1",
+    "@types/node": "^18.15.11",
+    "esbuild": "^0.17.15",
+    "eslint": "^8.37.0",
+    "typescript": "^5.0.3",
+    "zod": "^3.21.4"
+  }
 }
